2023101904-引入第三方库HiEasyX，编译通过

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -1,3 +1,8 @@
 **2023101901**
 - 基础图形显示测试通过。
 - 创建好VS下解决方案，添加`gui`项目，图形界面代码放在这个项目。
+
+**2023101904**
+- 引入`HiEasyX`库，库的地址为[https://github.com/zouhuidong/HiEasyX](https://github.com/zouhuidong/HiEasyX)。
+- 原本是使用`EasyX`库的，库的地址为[https://docs.easyx.cn/zh-cn/intro](https://docs.easyx.cn/zh-cn/intro)。
+- `HiEasyX`库支持更多的窗口操作，使用的话要先阅读使用说明，参考链接为[https://github.com/zouhuidong/HiEasyX/blob/main/Tutorial/setup.md](https://github.com/zouhuidong/HiEasyX/blob/main/Tutorial/setup.md)。
