2023102100-移除HiEasyX库，改用EasyX库

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -6,3 +6,6 @@
 - 引入`HiEasyX`库，库的地址为[https://github.com/zouhuidong/HiEasyX](https://github.com/zouhuidong/HiEasyX)。
 - 原本是使用`EasyX`库的，库的地址为[https://docs.easyx.cn/zh-cn/intro](https://docs.easyx.cn/zh-cn/intro)。
 - `HiEasyX`库支持更多的窗口操作，使用的话要先阅读使用说明，参考链接为[https://github.com/zouhuidong/HiEasyX/blob/main/Tutorial/setup.md](https://github.com/zouhuidong/HiEasyX/blob/main/Tutorial/setup.md)。
+
+**2023102100**
+- 放弃`HiEasyX`库，C和C++混合编程太麻烦了，使用更简单的`EasyX`库。
