2023102401-显示时图形平移到窗口中心，并且将Y轴变换到窗口坐标系，修改源码文件编码为UTF-8

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -20,3 +20,8 @@
 - 实现从DXF解析结果中传递数据到画布中并绘制出来。
 - 实现了边界盒基本功能。
 - 完善线圆的功能。
+
+**2023102401**
+- 程序员节日快乐。
+- 全部文件编码修改为UTF-8，建议VSCode中也设置为UTF-8。
+- 显示时图形平移到窗口中心，并且将Y轴变换到窗口坐标系。
