2023102800-增加鼠标键盘操作逻辑，修复图形放缩的bug

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -25,3 +25,7 @@
 - 程序员节日快乐。
 - 全部文件编码修改为UTF-8，建议VSCode中也设置为UTF-8。
 - 显示时图形平移到窗口中心，并且将Y轴变换到窗口坐标系。
+
+**2023102800**
+- 修复图形放缩平移居中显示的bug。
+- 增加鼠标键盘操作逻辑，支持图形鼠标滚轮放缩、中键拖动、HOME键还原。
