2023103100-去除中心缩放，增加光标缩放

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -29,3 +29,8 @@
 **2023102800**
 - 修复图形放缩平移居中显示的bug。
 - 增加鼠标键盘操作逻辑，支持图形鼠标滚轮放缩、中键拖动、HOME键还原。
+
+**2023103100**
+- 增加光标缩放的基本逻辑，去除中心缩放。
+- 参考文章[Reference](https://medium.com/@benjamin.botto/zooming-at-the-mouse-coordinates-with-affine-transformations-86e7312fd50b)。
+- 光标缩放还有bug，图形缩放超出画布边界时回不来，可能是未更新显示中心导致。
