2023110300-增加向量接口，增加圆弧接口

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -34,3 +34,7 @@
 - 增加光标缩放的基本逻辑，去除中心缩放。
 - 参考文章[Reference](https://medium.com/@benjamin.botto/zooming-at-the-mouse-coordinates-with-affine-transformations-86e7312fd50b)。
 - 光标缩放还有bug，图形缩放超出画布边界时回不来，可能是未更新显示中心导致。
+
+**2023110200**
+- 增加向量接口。
+- 增加圆弧接口，简单测试绘制圆弧OK。
