2023111300-重构了实体接口，改用向量参与运算，重构缩放逻辑，还有bug

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -42,3 +42,8 @@
 **2023110400**
 - 圆弧加入实体中，增加圆弧平移缩放逻辑。
 - 再次强调，缩放的逻辑仍旧存在bug，即显示中心点相关的bug。
+
+**2023111300**
+- 重构了实体的接口，使用向量参与运算。
+- 重构了缩放逻辑，采用世界坐标系/视口坐标系模型。
+- 以光标为中心缩放效果没达到，需要修复。
