2023111700-修复了缩放的bug

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -47,3 +47,7 @@
 - 重构了实体的接口，使用向量参与运算。
 - 重构了缩放逻辑，采用世界坐标系/视口坐标系模型。
 - 以光标为中心缩放效果没达到，需要修复。
+
+**2023111700**
+- 修复了缩放的bug，目前已实现基于视口坐标系变换的缩放。
+- 还差平移功能，注意区分中键按下往右边拖的时候，窗口坐标系是往右边走还是左边走。
