2023111800-重构向量的使用逻辑，增加视图拖动显示逻辑

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -51,3 +51,7 @@
 **2023111700**
 - 修复了缩放的bug，目前已实现基于视口坐标系变换的缩放。
 - 还差平移功能，注意区分中键按下往右边拖的时候，窗口坐标系是往右边走还是左边走。
+
+**2023111800**
+- 更改几何实体底层数据为向量，程序中传参也使用向量，因为向量是全局通用的概念，而点只是实体。
+- 增加视图拖动显示功能。
