2023112600-增加矩阵接口

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -58,3 +58,9 @@
 
 **2023111900**
 - 增加随机图形接口。
+
+**2023112600**
+- 增加矩阵接口。
+- 在线书籍：https://gamemath.com/book/intro.html
+- 一个博客：https://www.mauriciopoppe.com/
+- 在线资源：https://lavalle.pl/planning/node96.html
