2023112601-调整lsVector以及lsBoundbox的实现

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -64,3 +64,6 @@
 - 在线书籍：https://gamemath.com/book/intro.html
 - 一个博客：https://www.mauriciopoppe.com/
 - 在线资源：https://lavalle.pl/planning/node96.html
+
+**2023112601**
+- 调整lsVector以及lsBoundbox的实现。
