2023112800-增加圆和圆弧的矩阵变换接口

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -70,3 +70,7 @@
 
 **2023112602**
 - 增加几何图元矩阵变换的接口。
+
+**2023112800**
+- 增加圆和圆弧的矩阵变换接口。
+- 推荐一本书：https://www.pbr-book.org/，以及配套代码：https://github.com/mmp/pbrt-v3。
