2023112900-增加线段求交算法以及F5刷新随机线段逻辑

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -74,3 +74,8 @@
 **2023112800**
 - 增加圆和圆弧的矩阵变换接口。
 - 推荐一本书：https://www.pbr-book.org/，以及配套代码：https://github.com/mmp/pbrt-v3。
+
+**2023112900**
+- 增加线段求交算法。
+- 增加F5刷新随机线段逻辑。
+- 不得不说，国内的知识共享生态真的差，这些基础的计算几何知识维基百科都有很详实的资料，切换中文搜索事倍功半。
