--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -79,3 +79,7 @@
 - 增加线段求交算法。
 - 增加F5刷新随机线段逻辑。
 - 不得不说，国内的知识共享生态真的差，这些基础的计算几何知识维基百科都有很详实的资料，切换中文搜索事倍功半。
+
+**2023120100**
+- 增加多边形结构体定义。
+- 准备引入多边形。
