2023121000-几何实体用wxWidgets绘制

--- a/lhy/doc/开发记录文档.md
+++ b/lhy/doc/开发记录文档.md
@@ -98,3 +98,6 @@
 - 增加绘图窗口。
 - 可以参考官方wiki : https://wiki.wxwidgets.org/ 。在wiki中按照关键词进行搜索，比如我搜索draw，导航到[链接](https://wiki.wxwidgets.org/Drawing_on_a_panel_with_a_DC)。
 - 也可以参考一些国内教程，比如[https://www.jianshu.com/p/6420be9dae01](https://www.jianshu.com/p/6420be9dae01)。
+
+**2023121000**
+- 几何实体用wxWidgets绘制。
